Linux/Windows: Crash in profile switcher menu with account consistency enabled

BackgoundColorHoverButton always needs the ProfileChooserView to know
the system theme.

BUG=694506

Review-Url: https://codereview.chromium.org/2704303003
Cr-Commit-Position: refs/heads/master@{#452682}

Former-commit-id: 431dfbf17e0b37a057f16b587d8c134193392dfd